Update for release V0.0.2

--- a/public/html/menu.html
+++ b/public/html/menu.html
@@ -118,9 +118,7 @@
           <span class="close-btn">&times;</span>
           <h2>Receipt</h2>
           <div class="receipt-content">
-            <p>2x Patatas Bravas</p>
-            <p>3x Cheesecake</p>
-            <p>Sangria</p>
+            <p>Nothing has been orderd</p>
           </div>
         </div>
         <div class="modal-footer-tekst">Thank you for your order</div>
