--- a/public/html/index.html
+++ b/public/html/index.html
@@ -46,7 +46,9 @@
           </div>
         </div>
       </div>
+      <div class="onder-container">
       <div class="onder-style"></div>
+      </div>
     <script src="js/global/cl_request.js"></script>
     <script src="js/cl_index.js"></script>
   </body>
