menu procenten fix 1.1

--- a/public/html/menu.html
+++ b/public/html/menu.html
@@ -38,77 +38,79 @@
           <div class="tijd-container">03:00:00</div>
         </div>
       </div>
-      <div class="content-container">
-        <div class="placeholder-container">
-          <div class="placeholder-boven-container">
-            <div class="placeholder-foto-container"></div>
-            <div class="placeholder-name-container">Patatas bravas</div>
-            <div class="placeholder-description-container">
-              Gefrituurde aardappeltjes met pittige tomatensaus
+      <div class="main-content-container">
+        <div class="content-container">
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
             </div>
           </div>
-          <div class="placeholder-onder-container">
-            <button class="placeholder-orderbutton">Bestel hier</button>
-          </div>
-        </div>
-        <div class="placeholder-container">
-          <div class="placeholder-boven-container">
-            <div class="placeholder-foto-container"></div>
-            <div class="placeholder-name-container">Patatas bravas</div>
-            <div class="placeholder-description-container">
-              Gefrituurde aardappeltjes met pittige tomatensaus
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
             </div>
           </div>
-          <div class="placeholder-onder-container">
-            <button class="placeholder-orderbutton">Bestel hier</button>
-          </div>
-        </div>
-        <div class="placeholder-container">
-          <div class="placeholder-boven-container">
-            <div class="placeholder-foto-container"></div>
-            <div class="placeholder-name-container">Patatas bravas</div>
-            <div class="placeholder-description-container">
-              Gefrituurde aardappeltjes met pittige tomatensaus
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
             </div>
           </div>
-          <div class="placeholder-onder-container">
-            <button class="placeholder-orderbutton">Bestel hier</button>
-          </div>
-        </div>
-        <div class="placeholder-container">
-          <div class="placeholder-boven-container">
-            <div class="placeholder-foto-container"></div>
-            <div class="placeholder-name-container">Patatas bravas</div>
-            <div class="placeholder-description-container">
-              Gefrituurde aardappeltjes met pittige tomatensaus
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
             </div>
           </div>
-          <div class="placeholder-onder-container">
-            <button class="placeholder-orderbutton">Bestel hier</button>
-          </div>
-        </div>
-        <div class="placeholder-container">
-          <div class="placeholder-boven-container">
-            <div class="placeholder-foto-container"></div>
-            <div class="placeholder-name-container">Patatas bravas</div>
-            <div class="placeholder-description-container">
-              Gefrituurde aardappeltjes met pittige tomatensaus
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
             </div>
           </div>
-          <div class="placeholder-onder-container">
-            <button class="placeholder-orderbutton">Bestel hier</button>
-          </div>
-        </div>
-        <div class="placeholder-container">
-          <div class="placeholder-boven-container">
-            <div class="placeholder-foto-container"></div>
-            <div class="placeholder-name-container">Patatas bravas</div>
-            <div class="placeholder-description-container">
-              Gefrituurde aardappeltjes met pittige tomatensaus
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
             </div>
-          </div>
-          <div class="placeholder-onder-container">
-            <button class="placeholder-orderbutton">Bestel hier</button>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
+            </div>
           </div>
         </div>
       </div>
