menu content container fix

--- a/public/html/menu.html
+++ b/public/html/menu.html
@@ -112,9 +112,120 @@
               <button class="placeholder-orderbutton">Bestel hier</button>
             </div>
           </div>
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
+            </div>
+          </div>
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
+            </div>
+          </div>
+
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
+            </div>
+          </div>
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
+            </div>
+          </div>
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
+            </div>
+          </div>
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
+            </div>
+          </div>
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
+            </div>
+          </div>
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
+            </div>
+          </div>
+          <div class="placeholder-container">
+            <div class="placeholder-boven-container">
+              <div class="placeholder-foto-container"></div>
+              <div class="placeholder-name-container">Patatas bravas</div>
+              <div class="placeholder-description-container">
+                Gefrituurde aardappeltjes met pittige tomatensaus
+              </div>
+            </div>
+            <div class="placeholder-onder-container">
+              <button class="placeholder-orderbutton">Bestel hier</button>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="onder-style"></div>
+      <div class="onder-style-container">
+        <div class="onder-style"></div>
+      </div>
       <div id="receipt-modal" class="modal">
         <div class="modal-content">
           <span class="close-btn">&times;</span>
@@ -147,6 +258,6 @@
       </div>
     </div>
     <script src="js/global/cl_request.js"></script>
-    <script src="js/cl_menu.js"></script>
+    <!-- <script src="js/cl_menu.js"></script> -->
   </body>
 </html>
