--- a/public/html/menu.html
+++ b/public/html/menu.html
@@ -258,6 +258,6 @@
       </div>
     </div>
     <script src="js/global/cl_request.js"></script>
-    <!-- <script src="js/cl_menu.js"></script> -->
+    <script src="js/cl_menu.js"></script>
   </body>
 </html>
