code responsive design

--- a/public/html/code.html
+++ b/public/html/code.html
@@ -16,6 +16,9 @@
             <input type="input" placeholder="Code" name="Code" />
           </div>
         </div>
+        <div class="onder-style-container">
+          <div class="onder-style"></div>
+        </div>
       </div>
       <div class="logo-container">
         <div class="logo"></div>
