--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,43 +12,64 @@
     <link rel="icon" href="../images/icon.png" type="image/png" />
   </head>
   <body>
-    <div class="main-container">
-      <div class="nav">
-        <div class="top-nav">
-          <div class="nav-links">
-            <button class="hamburger-button"></button>
-            <div class="logo-container">
-              <div class="logo"></div>
-            </div>
-          </div>
-          <div class="card-container">
-            <button class="card-button"></button>
-          </div>
+    <div class="main">
+      <div class="container">
+        <div class="form-toggle">
+          <button id="login-toggle" class="active">Login</button>
+          <button id="register-toggle">Register</button>
         </div>
-      </div>
-      <div class="main-content-container">
-        <div class="content-container">
-          <div class="content-boven">
-            <div class="content-logo-container">
-              <div class="content-logo"></div>
-            </div>
+
+        <!-- Login Form -->
+        <form id="login-form" class="form active">
+          <div class="form-group">
+            <label for="login-email">Email</label>
+            <input type="email" id="login-email" required />
+            <small class="error-message"></small>
           </div>
-          <div class="content-midden">
-            <div class="content-tekst">
-              We heten u van harte welkom in ons restaurant en kijken ernaar uit
-              om u te verwennen met smaakvolle gerechten en een onvergetelijke
-              eetervaring. Onze passie voor heerlijk eten, gastvrijheid en een
-              gezellige sfeer staat centraal bij alles wat we doen.
-            </div>
+          <div class="form-group">
+            <label for="login-password">Password</label>
+            <input type="password" id="login-password" required minlength="6" />
+            <small class="error-message"></small>
           </div>
-          <div class="content-onder">
-            <button onclick="startSession()" class="start-button">Start hier</button>
+          <button type="submit">Login</button>
+        </form>
+
+        <!-- Register Form -->
+        <form id="register-form" class="form">
+          <div class="form-group">
+            <label for="register-username">Username</label>
+            <input type="text" id="register-username" required minlength="3" />
+            <small class="error-message"></small>
           </div>
-        </div>
+          <div class="form-group">
+            <label for="register-email">Email</label>
+            <input type="email" id="register-email" required />
+            <small class="error-message"></small>
+          </div>
+          <div class="form-group">
+            <label for="register-password">Password</label>
+            <input
+              type="password"
+              id="register-password"
+              required
+              minlength="6"
+            />
+            <small class="error-message"></small>
+          </div>
+          <div class="form-group">
+            <label for="register-confirm-password">Confirm Password</label>
+            <input
+              type="password"
+              id="register-confirm-password"
+              required
+              minlength="6"
+            />
+            <small class="error-message"></small>
+          </div>
+          <button type="submit">Register</button>
+        </form>
       </div>
-      <div class="onder-container">
-      <div class="onder-style"></div>
-      </div>
+    </div>
     <script src="js/global/cl_request.js"></script>
     <script src="js/cl_index.js"></script>
   </body>
