--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -204,7 +204,36 @@
 
         <section class="cards" data-section="notes" style="display: none">
           <h3>Notes Section</h3>
-          <p>This is where your notes would be displayed.</p>
+          <table class="notes-table">
+            <thead>
+              <tr>
+                <th>Customer</th>
+                <th>Table</th>
+                <th>Note</th>
+                <th>Date</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>John Doe</td>
+                <td>Tafel in de hoek</td>
+                <td>Likes to have extra napkins.</td>
+                <td>27-09-2024</td>
+              </tr>
+              <tr>
+                <td>Jane Smith</td>
+                <td>Tafel naast de bar</td>
+                <td>Prefers a window seat.</td>
+                <td>27-09-2024</td>
+              </tr>
+              <tr>
+                <td>Mike Johnson</td>
+                <td>Tafel bij de ingang</td>
+                <td>Allergic to peanuts.</td>
+                <td>27-09-2024</td>
+              </tr>
+            </tbody>
+          </table>
         </section>
 
         <section class="cards" data-section="storage" style="display: none">
