--- a/public/html/menu.html
+++ b/public/html/menu.html
@@ -222,21 +222,13 @@
       <div class="onder-style-container">
         <div class="onder-style"></div>
       </div>
-      <div id="receipt-modal" class="modal">
-        <div class="modal-content">
-          <span class="close-btn">&times;</span>
-          <h2>Receipt</h2>
-          <div class="receipt-content">
-            <p>Nothing has been orderd</p>
-          </div>
-        </div>
-        <div class="modal-footer-tekst">Thank you for your order</div>
-        <div class="modal-footer">
-          <button class="checkout-btn">Order</button>
-        </div>
+      <!-- Bonnetje -->
+      <div class="reciept-main-container">
+        <div class="reciept-top"></div>
       </div>
-      <!-- Sidebar structure (hidden by default) -->
-      <!-- Sidebar structure (updated with only buttons) -->
+
+      <!-- Bonnetje -->
+
       <div id="sidebar" class="sidebar">
         <div class="sidebar-content">
           <span class="close-sidebar">&times;</span>
