--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -25,16 +25,16 @@
             <li class="nav-item" data-section="tables">
               <a>Tables</a>
               <ul class="submenu">
-                <li class="submenu-item" data-subsection=".all">
+                <li class="submenu-item" data-section=".all">
                   <a>All</a>
                 </li>
-                <li class="submenu-item" data-subsection=".available">
+                <li class="submenu-item" data-section=".available">
                   <a>Available</a>
                 </li>
-                <li class="submenu-item" data-subsection=".reserved">
+                <li class="submenu-item" data-section=".reserved">
                   <a>Reserved</a>
                 </li>
-                <li class="submenu-item" data-subsection=".occupied">
+                <li class="submenu-item" data-section=".occupied">
                   <a>Occupied</a>
                 </li>
               </ul>
@@ -262,7 +262,6 @@
                 <th>Item Name</th>
                 <th>Price</th>
                 <th>Tags</th>
-                <!-- New column header for tags -->
                 <th>Image</th>
                 <th>Action</th>
               </tr>
