--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -360,12 +360,13 @@
 
     <div id="pop-up">
       <div class="container">
-        <button id="close-popup" type="button">&times;</button>
+        <button id="close-dietary" type="button">&times;</button>
         <h2>Dietary Preferences</h2>
         <form id="dietary-form">
           <!-- Checkboxes will be dynamically created here -->
+          <!-- Here also will be a img container -->
         </form>
-        <button type="submit">Submit</button>
+        <button id="submit-dietary" type="submit">Submit</button>
       </div>
     </div>
 
